--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run compile; npm run export",
-    "watch": "onchange './app.js' 'src/**/*' -- npm run start",
+    "start": "npm run compile; npm run serve",
+    "watch": "onchange './app.js' './emails.js' 'src/**/*' -- npm run start",
     "export": "node lib/export.js",
+    "serve": "node lib/server.js",
     "compile": "babel src --ignore node_modules,dist --out-dir lib --presets es2015,stage-2,react,babel-polyfill --plugins syntax-decorators"
   },
   "repository": {
@@ -30,8 +31,10 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
+    "body-parser": "^1.17.1",
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.15.0",
+    "lodash": "^4.17.4",
     "oy-vey": "^0.8.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
@@ -39,6 +42,7 @@
   "dependencies": {
     "cxs": "^3.0.4",
     "inline-css": "^2.2.2",
+    "lodash": "^4.17.4",
     "onchange": "^3.2.1"
   }
 }
