--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run compile; npm run serve",
-    "watch": "onchange './app.js' './emails.js' 'src/**/*' -- npm run start",
+    "watch": "nodemon --exec 'babel-node' src/server.js",
     "export": "node lib/export.js",
     "serve": "node lib/server.js",
     "compile": "babel src --ignore node_modules,dist --out-dir lib --presets es2015,stage-2,react,babel-polyfill --plugins syntax-decorators"
