--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.15.0",
     "lodash": "^4.17.4",
+    "nodemon": "^1.11.0",
     "oy-vey": "^0.8.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
