--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,3 @@
 {
-  "presets": ["es2015", "stage-2","react","babel-polyfill"]
+    "presets": [["env", { "targets": { "node": "current" } }], "stage-2","react","babel-polyfill"]
 }
