--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run compile; npm run serve",
-    "watch": "nodemon --exec 'babel-node' src/server.js",
-    "export": "node lib/export.js",
-    "serve": "node lib/server.js",
-    "compile": "babel src --ignore node_modules,dist --out-dir lib --presets es2015,stage-2,react,babel-polyfill --plugins syntax-decorators"
+    "watch": "nodemon --exec 'babel-node' src/server.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +24,7 @@
     "babel-plugin-syntax-decorators": "^6.13.0",
     "babel-plugin-transform-runtime": "~6.15.0",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.2.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
