--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "nodemon --exec 'babel-node' src/server.js"
+    "watch": "nodemon --exec 'babel-node' src/server.js",
+    "build": "babel src -d dist",
+    "serve": "node dist/server.js"
   },
   "repository": {
     "type": "git",
